[package]
edition = "2021"
name = "blitty-2040"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }


panic-halt = "0.2.0"
smart-leds = "0.3.0"
ws2812-pio = "0.8.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embedded-graphics = "0.8.1"
embedded-hal-async = "1.0.0"
oled_async = "0.1.0-alpha1"
embassy-rp = { version = "0.4.0", features = [
    "rp2040",
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
display-interface-i2c = "0.5.0"
display-interface = "0.5.0"
embassy-time = "0.4.0"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"
#adafruit-kb2040 = { version = "0.8.0", default-features = true }

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version = "0.11", features = [
    "rt",
    "critical-section-impl",
    "i2c-write-iter",
] }
rp2040-boot2 = "0.3"
blitty = "0.2.0"
#blitty = { path = "../blitty" }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
